<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Archivos">

    <Button
        android:id="@+id/button"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:background="#FFFFFF"
        android:text="@string/boton2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="512dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="161dp"
        android:layout_height="52dp"
        android:background="#FD0000"
        android:text="@string/boton1"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="229dp"
        tools:layout_editor_absoluteY="436dp" />

    <RadioButton
        android:id="@+id/radb4"
        android:layout_width="134dp"
        android:layout_height="53dp"
        android:layout_marginStart="40dp"
        android:background="#FFFFFF"
        android:text="@string/radb2"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="512dp" />

    <RadioButton
        android:id="@+id/radb3"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        android:text="@string/radb1"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="440dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="355dp"
        android:layout_height="46dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/et2"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="58dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="347dp"
        android:layout_height="284dp"
        android:background="#FFFFFF"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="123dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="102dp"
        android:layout_height="61dp"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="576dp" />

</androidx.constraintlayout.widget.ConstraintLayout>