<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button5"
        android:layout_width="185dp"
        android:layout_height="73dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="16dp"
        android:background="#FD0000"
        android:onClick="archivos"
        android:text="@string/boton4"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <EditText
        android:id="@+id/et1_numero"
        android:layout_width="299dp"
        android:layout_height="51dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="80dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/et1"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="170dp"
        android:layout_height="52dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:onClick="Tabla"
        android:text="@string/boton3"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="296dp"
        android:layout_height="289dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et1_numero" />
</androidx.constraintlayout.widget.ConstraintLayout>